--- a/micro.css
+++ b/micro.css
@@ -34,6 +34,15 @@ main{
     height: 100%;
     /* background-color: teal; */
 }
+.talk{
+    position: absolute;
+    right: 70px;
+}
+.community{
+    position: absolute;
+    right: 75px;
+    bottom: 250px;
+}
 aside{
     flex: 0 0 80px;
     /* width: 75px; */
@@ -49,13 +58,17 @@ aside ul li:hover{
     /* background-color: rgb(22,36,53); */
     background-color: rgb(44,42,80);
 }
+
+aside ul li:active{
+    background-color: rgb(80,81,249);
+}
 aside button{
     display: flex;
     align-items: end;
     margin-left: 24px;
 }
 aside button .fa-angles-left{
-    /* background-color: rgb(24,26,46); */
+    background-color: rgb(24,26,46);
     border: none;
     /* color: white; */
 }
@@ -68,7 +81,7 @@ aside button .fa-angles-left{
     left: 75px;
     background-color: rgb(30,31,67);
     overflow-x: hidden;
-    transition: 0.5s;
+    /* transition: 0.5s; */
     padding-top: 30px;
 }
 .sidepanel p{
@@ -80,41 +93,432 @@ aside button .fa-angles-left{
     font-size: 25px;
     color: #818181;
     display: block;
-    /* transition: 0.3s; */
+    transition: 0.3s;
 }
 
 .sidepanel a:hover {
     color: #f1f1f1;
 }
-
-.sidepanel .closebtn {
-    position: absolute;
-    top: 0;
-    right: 25px;
-    font-size: 36px;
+/* dropdown */
+.dropbtn {
+  background-color: rgb(30,31,67);
+  color: white;
+  padding: 16px;
+  font-size: 15px;
+  border: none;
+  cursor: pointer;
 }
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f1f1f1;
+  min-width: 160px;
+  overflow: auto;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown a:hover {background-color: rgb(30,31,67);}
 article{
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
 }
-/* .content{
-    overflow: auto;
-   
-   
-    margin: 10px;
-    border-radius: 10px;
-    
-} */
+
+
+/* main for auditlog */
+
+/* Main */
+
+main{
+   /* margin-left: 17.25rem;     5rem Means 5rem * 16px = 80px */
+   height: 100vh;
+}
+
+/* Content-1 */
+
+/* Header */
+
+.content-1 header{
+   position: sticky;
+   display: flex;
+   flex-direction: row;
+   background-color: white;
+   justify-content: flex-end;
+   align-items: center;
+   align-content: center;
+   margin: 0;
+   padding: 0;
+   top: 0;
+}
+
+.content-1 header .logo{
+   margin-right: auto;
+   padding-left: 10px;
+   font-size: 26px;
+   font-weight: 550;
+   font-family: 'Overpass', sans-serif;
+}
+button{
+   outline: none;
+   border: none;
+   cursor: pointer;
+   text-align: center;
+}
+
+/* UL */
+
+main .content-1 header ul{
+   display: flex;
+   flex-direction: row;
+   align-items: center;
+   justify-content: center;
+   list-style: none;
+}
+
+main .content-1 header ul li{
+   width: 100%;
+   padding: 10px;
+}
+
+main .content-1 header ul li a{
+   display: flex;
+   justify-content: center;
+   align-items: center;
+}
+
+i{
+   color: white;
+}
+
+main .content-1 header ul li:first-child button{
+   height: 1.95rem;
+   width: 4.85em;
+   background-color: #D44833;
+   color: white;
+   font-size: 13.6px;
+   font-weight: 900;
+   border-radius: 3px;
+}
+
+main .content-1 header ul li:nth-child(2) button{
+   height: 1.4rem;
+   width: 2.5rem;
+   border-radius: 3px;
+   border: 1px solid #d8d8d5;
+}
+
+main .content-1 header ul li:nth-child(2) i{
+   color: black;
+   font-size: 15px;
+}
+
+main .content-1 header ul li:last-child button{
+   background-color: #FA9131;
+   width: 2.2rem;
+   height: 2.2rem;
+   border-radius: 3px;
+}
+
+main .content-1 header ul li:nth-child(3) i{
+   font-size: 13.8px;
+}
+
+/* Table */
+
+main .content-1 .table-1{
+   border-collapse: collapse;
+   width: 100%;
+   margin-top: -018px;
+}
+
+main .content-1 .table-1 thead{
+   text-align: start;
+   font-size: 15px;
+   letter-spacing: 0.4px;
+   font-family: 'Yantramanav', sans-serif;
+   min-width: 500px;
+   color: #505050;
+   z-index: 100;
+}
+
+main .content-1 .table-1 thead th{
+   text-align: left;
+   position: sticky;
+   top: 7px;
+   padding: 10px 15px;
+   border-top: 1px solid #dddddd;
+
+   background-color: white;
+   z-index: 100;
+
+
+}
+
+main .content-1 .table-1 tbody tr td{
+   padding: 10px 15px;
+   font-family: 'Dongle', sans-serif;
+   font-size: 15.5px;
+   border-bottom: 1px solid #dddddd;
+   background-color: white;
+}
+
+main .content-1 .table-1 tbody tr:hover td{
+   background-color: #F7F7F7;
+   cursor: pointer;
+}
+
+main .content-1 .table-1 tbody tr td:nth-child(2), .table-1 tbody tr td:nth-child(5){
+   color: #2485E8;
+}
+
+main .content-1 .table-1 tbody tr td:nth-child(5){
+   font-size: 15.5px;
+}
+
+main .table-1 tbody tr td:nth-child(2){
+   font-size: 15.5px;
+}
+
+/* Content-2 */
+
+main .content-2{
+   display: flex;
+   flex-direction: row;
+   flex-wrap: wrap;
+}
+
+/* Left - Side */
+main .content-2 .left-side{
+   flex: 1;
+}
+
+/* Header */
+
+main .content-2 .left-side header{
+   display: flex;
+   flex-direction: row;
+   background-color: white;
+   justify-content: flex-end;
+   align-items: center;
+   align-content: center;
+   position: sticky;
+   top: 0;
+   z-index: 100;
+}
+
+main .content-2 .left-side header .logo{
+   margin-right: auto;
+   padding-left: 10px;
+   font-size: 21px;
+   font-weight: 550;
+   font-family: 'Overpass', sans-serif;
+}
+
+main .content-2 .left-side header ul{
+   display: flex;
+   flex-direction: row;
+   align-items: center;
+   justify-content: center;
+   list-style: none;
+}
+
+main .content-2 .left-side header ul li{
+   width: 100%;
+   padding-right: 20px;
+}
+
+main .content-2 .left-side header ul li a{
+   display: flex;
+   justify-content: center;
+   align-items: center;
+}
+
+main .content-2 .left-side header ul li:first-child button{
+   height: 1.80rem;
+   width: 4.98rem;
+   background-color: #1ABD9D;
+   color: white;
+   font-size: 12.5px;
+   font-weight: 900;
+   border-radius: 3px;
+}
+main .content-2 .left-side header ul li:first-child  i{
+   font-size: 12px;
+}
+
+main .content-2 .left-side header ul li:nth-child(2) button{
+   height: 1.4rem;
+   width: 2.5rem;
+   border-radius: 3px;
+   border: 1px solid #d8d8d5;
+   background-color: white;
+}
+
+main .content-2 .left-side header ul li:nth-child(2) i{
+   color: black;
+   font-size: 15px;
+}
+
+main .content-2 .left-side .body div:hover{
+   background-color: red;
+   cursor: pointer;
+}
+
+
+/* Right - Side */ 
+
+main .content-2 .right-side{
+   flex: 3;
+   margin-left: 2px;
+}
+
+/* Header */
+
+main .content-2 .right-side header{
+   display: flex;
+   flex-direction: row;
+   background-color: white;
+   justify-content: flex-end;
+   align-items: center;
+   align-content: center;
+   position: sticky;
+   top: 0;
+   margin-left: 2px;
+   padding-left: 15px;
+}
+
+main .content-2 .right-side header .logo{
+   margin-right: auto;
+   font-size: 21px;
+   font-weight: 550;
+   font-family: 'Overpass', sans-serif;
+}
+
+main .content-2 .right-side header ul{
+   list-style: none;
+   padding: 0;
+   margin: 0;
+   display: flex;
+   flex-direction: row;
+   height: 100%;
+   align-items: center;
+   justify-content: center;
+   align-content: center;
+}
+
+main .content-2 .right-side header ul li{
+   width: 100%;
+   padding-right: 20px;
+   cursor: pointer;
+}
+
+main .content-2 .right-side header ul li a{
+   display: flex;
+   align-items: center;
+   flex-direction: row;
+   justify-content: center;
+   font-size: 12px;
+   align-content: center;
+   color: #3e4041;
+   font-weight: 600;
+}
+
+main .content-2 .right-side header ul li a i{
+   color: #3e4041;
+}
+
+/* Header - 2 */
+
+main .content-2 .right-side .header-2{
+   position: sticky;
+   top: 70px;
+   margin-left: 2px;
+}
+
+main .content-2 .right-side .header-2 ul{
+   list-style: none;
+   display: flex;
+   background-color: #F6F6F7;
+   justify-content: flex-start;
+   padding: 0;
+   margin-top: 0;
+   margin-bottom: 0;
+}
+
+main .content-2 .right-side .header-2 ul li{
+   padding-left: 15px;
+   padding-right: 15px;
+   border-right: 1px solid #EEEFEF;
+   padding-top: 13px;
+   padding-bottom: 13px;
+}
+main .content-2 .right-side .header-2 ul li a{
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   color: #565A5C;
+   font-size: 13px;
+}
+
+main .content-2 .right-side .header-2 ul li a i{
+   color: #131212;
+   font-size: 13px;
+}
+
+/* Body */
+
+main .content-2 .right-side .body{
+   background-color: white;
+   margin-top: 0;
+   height: 89vh;
+   margin-left: 2px;
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   position: sticky;
+   top: 110px;
+}
+
+main .content-2 .right-side .body .image{
+   background-color: white;
+   width: 68%;
+   height: 68vh;
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   border-radius: 2px;
+   box-shadow: 1px 2px 3px 4px rgba(12,12,12,0.2);
+}
+
+main .content-2 .right-side .body .image img{
+   width: 85%;
+   border-radius: 2px;
+   height: 55vh;
+}
+
 #body-div {
     position: relative;
     overflow: hidden;
-    transition: 0.5s;
+    /* transition: 0.5s; */
+    transition: none;
     width: 95%;
     /* border: 1px solid black; */
 
 }
-
 .card1 {
     background: rgb(128, 82, 245);
     background: linear-gradient(90deg, rgba(128, 82, 245, 1) 0%, rgba(119, 135, 251, 1) 100%);
